@@ -4,7 +4,6 @@ buildscript {
     }
     dependencies {
         classpath("org.postgresql:postgresql:42.7.2")
-        classpath("org.flywaydb:flyway-database-postgresql:10.10.0")
     }
 }
 
@@ -14,17 +13,6 @@ plugins {
     alias(libs.plugins.spring.boot)
     alias(libs.plugins.spring.dependency.management)
     alias(libs.plugins.jooq)
-    alias(libs.plugins.flyway)
-}
-
-flyway {
-    driver = "org.postgresql.Driver"
-    url = "jdbc:postgresql://localhost:5432/acp"
-    user = "user"
-    password = "password"
-    schemas = arrayOf("psp")
-    createSchemas = true
-    baselineOnMigrate = true
 }
 
 dependencies {
@@ -32,14 +20,12 @@ dependencies {
     
     implementation(libs.spring.boot.starter.web)
     implementation(libs.jackson.module.kotlin)
-    implementation(libs.spring.boot.starter.webflux) // For calling KakaoPay
-    implementation(libs.kotlin.logging) // Kotlin Logging
+    implementation(libs.spring.boot.starter.webflux)
+    implementation(libs.kotlin.logging)
 
     // DB (PSP DB)
     implementation(libs.spring.boot.starter.jooq)
     implementation(libs.postgresql)
-    implementation("org.flywaydb:flyway-core")
-    implementation("org.flywaydb:flyway-database-postgresql")
     implementation(libs.kotlin.coroutines.core)
     implementation(libs.kotlin.coroutines.reactor)
     jooqGenerator(libs.postgresql)
@@ -91,6 +77,7 @@ jooq {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     testLogging {
         events("passed", "skipped", "failed")
         showStandardStreams = true
